# PlaywrightCICD

./: .env  .gitignore  conftest.py  notes.md  pyproject.toml
.github/workflows/: playwright.yml
__pycache__/: conftest.cpython-313-pytest-9.0.2.pyc.476
data/: credentials.json
pages/: login_page.py  page_manager.py  tasksmash_page.py
reports/: report.html
tests/: test_api.py  test_google.py  test_login.py  test_ui.py
utils/: api_base.py
