[project]
name = "playwrightcicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-html>=4.2.0",
    "pytest-playwright-asyncio>=0.7.2",
]

[tool.pytest.ini_options]
addopts = "--headed --browser chromium --html=reports/report.html --self-contained-html --slowmo=200"
testpaths = ["tests"]